kubernetes/apps/home-automation/delugevpn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delugevpn
  labels:
    app: delugevpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delugevpn
  template:
    metadata:
      labels:
        app: delugevpn
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        capabilities:
          add:
            - NET_ADMIN
            - SYS_ADMIN

      containers:
        - name: delugevpn
          image: binhex/arch-delugevpn:latest
          # command:
          #   - /bin/bash
          #   - -c
          #   - while true; do sleep 3600; done
          # securityContext:
          #   runAsGroup: 1000
          #   runAsUser: 1000
          #   capabilities:
          #     add:
          #       - NET_ADMIN

          resources:
            limits:
              memory: 1Gi
              cpu: 500m
            requests:
              memory: 512Mi
              cpu: 300m

          ports:
            - containerPort: 8112
              protocol: TCP

          volumeMounts:
            - name: homelab-storage
              mountPath: /config
              subPath: deluge/config
            - name: homelab-storage
              mountPath: /data
              subPath: deluge/data

      volumes:
        - name: homelab-storage
          persistentVolumeClaim:
            claimName: homelab-nfs-pvc
