kubernetes/apps/home-automation/delugevpn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delugevpn

spec:
  selector:
    app: delugevpn

  ports:
    - name: webui
      port: 8112
      targetPort: 8112
    - name: privoxy
      port: 8118
      targetPort: 8118
    - name: daemon
      port: 58846
      targetPort: 58846
    - name: incoming
      port: 58946
      targetPort: 58946
