kubernetes/apps/home-automation/delugevpn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delugevpn
  namespace: home-automation
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-production"

spec:
  ingressClassName: external
  rules:
    - host: deluge.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delugevpn
                port:
                  number: 8112
    - host: prowlarr.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
  tls:
    - hosts:
        - deluge.rutberg.dev
      secretName: delugevpn-tls
